--- a/style.css
+++ b/style.css
@@ -1,6 +1,116 @@
 :root {
   color-scheme: dark;
 }
+@keyframes bounce-in {
+  0% { transform: scale(.8); }
+  50% { transform: scale(1); }
+  100% { transform: scale(.8); }
+}
+
+@media only screen and (max-width: 600px) {
+    .about-me-button, .projects-button {
+        display: none !important; 
+    }
+    
+    .github-button {
+        background-color: rgba(255, 255, 255, .07) !important;
+    }
+    
+    .nav-items {
+        padding-top: 10px !important;
+    }
+    
+    .github-button:hover {
+        
+    }
+    
+    .center {
+        display: inline !important;
+    }
+    
+    .pfp, .info {
+        text-align: center;
+    }
+    
+    #scroll-for-more {
+        position: fixed;
+        bottom: 0;
+        display: block;
+        opacity: .7;
+        animation: bounce-in 1.5s ease infinite;
+        text-align: center;
+        transition: all .5s;
+        width: 100%;
+        z-index: 50;
+    }
+    
+    #scroll-for-more.hide {
+        opacity: 0;
+    }
+    
+    #totop {
+        right: 50%;
+        transform: translateX(50%);
+        bottom: 15px;
+        padding: 10px 20px;
+        border-radius: 10px;
+        /* width: 150px; */
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 20px;
+        gap: 10px;
+    }
+    
+    #totoptext {
+        display: block;
+    }
+    
+    #totop > svg {
+        width: 16px;
+        height: 16px;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    #scroll-for-more {
+        display: none;
+    }
+    
+    #totop {
+        right: 75px;
+        bottom: 75px;
+        padding: 20px;
+        display: block;
+        border-radius: 100%;
+    }
+    
+    #totoptext {
+        display: none;
+    }
+    
+    #totop > svg {
+        width: 32px;
+        height: 32px;
+    }
+}
+
+#totop {
+    z-index: 99;
+    position: fixed;
+    visibility: hidden;
+    background: rgba(0, 0, 0, .85);
+    opacity: 0;
+    color: white;
+    transition: background-color .1s, color .1s, opacity .3s, visibility .3s;
+}
+
+.bounce-in {
+  animation: bounce-in 2s linear infinite;
+}
+
 * {
     font-family: system-ui;
     margin: 0;
@@ -24,19 +134,6 @@ canvas{
     bottom: 0;
     left: 0;
     right: 0;
-}
-#totop {
-    z-index: 99;
-    position: fixed;
-    right: 75px;
-    bottom: 75px;
-    background: rgba(0, 0, 0, .85);
-    padding: 20px;
-    border-radius: 100%;
-    visibility: hidden;
-    transition: background-color .1s, color .1s, opacity .3s, visibility .3s;
-    color: white;
-    opacity: 0;
 }
 #totop.show {
     visibility: visible;
@@ -93,10 +190,12 @@ canvas{
     width: 100%;
     height: 100%;
 }
+
 #about-me {
     top: 100%;
-    background-color: grey;
+    background-color: #000e00;
 }
+
 #projects {
     top: 200%;
     background-color: blue;
@@ -118,7 +217,7 @@ canvas{
     background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.0) )
 }
 .nav-items {
-    padding-top: 10px;
+    /* padding-top: 10px; */
     display: flex;
     align-content: center;
     justify-content: center;
